# padawanapp

./: README.md
.devcontainer/: devcontainer.json
padawapp/: about_me.py  app.py  certificates.py  certificates.yml  experience.py  pyproject.toml  skills.yml
padawapp/images/Menu/: Linkedin.json
padawapp/pages/: about_me.py  app.py  career.py  skills.yml  timeline.json  timeline.py
