[tool.poetry]
name = "padawapp"
version = "0.1.0"
description = ""
authors = ["Young Padawan <flavsferr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.26.0"
pandas = "^2.1.0"
glob2 = "^0.7"
pybase64 = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
