[tool.poetry]
name = "padawapp"
version = "0.1.0"
description = ""
authors = ["Young Padawan <flavsferr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.27.2"
pandas = "^2.1.0"
glob2 = "^0.7"
pybase64 = "^1.3.0"
streamlit-elements = "^0.1.0"
pip = "^23.2.1"
streamlit-option-menu = "^0.3.6"
streamlit-lottie = "^0.0.5"
pyyaml = "^6.0.1"
ruamel-yaml = "^0.18.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
